--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   },
   "dependencies": {
     "@bobaboard/boba-editor": "^0.0.9",
-    "@docusaurus/core": "2.0.0-alpha.74",
-    "@docusaurus/preset-classic": "2.0.0-alpha.74",
+    "@docusaurus/core": "^2.0.0-beta.3",
+    "@docusaurus/preset-classic": "^2.0.0-beta.3",
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "redocusaurus": "^0.4.4"
   },
   "browserslist": {
     "production": [
