--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@bobaboard/boba-editor": "^0.0.9",
+    "@bobaboard/boba-editor": "^0.2.1",
     "@docusaurus/core": "^2.0.0-beta.3",
     "@docusaurus/preset-classic": "^2.0.0-beta.3",
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "custom-webpack-plugin": "file:plugins/custom-webpack-plugin",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "redocusaurus": "^0.4.4"
   },
   "browserslist": {
@@ -34,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "expose-loader": "^3.0.0"
   }
 }
