--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
+    "start:api-doc": "API_SPEC=http://localhost:4200/open-api.json docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle ",
     "deploy": "docusaurus deploy",
