--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@docusaurus/preset-classic": "^2.0.0-beta.15",
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
+    "culori": "^2.0.3",
     "custom-webpack-plugin": "file:plugins/custom-webpack-plugin",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "redocusaurus": "^0.6.0"
+    "redocusaurus": "^0.6.0",
+    "twemoji": "^13.1.0"
   },
   "browserslist": {
     "production": [
@@ -38,6 +40,13 @@
     ]
   },
   "devDependencies": {
-    "expose-loader": "^3.0.0"
+    "@docusaurus/module-type-aliases": "^2.0.0-beta.15",
+    "@octokit/plugin-rest-endpoint-methods": "^5.13.0",
+    "@tsconfig/docusaurus": "^1.0.4",
+    "docusaurus-plugin-remote-content": "^2.1.0",
+    "expose-loader": "^3.0.0",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
+    "typescript": "^4.5.5"
   }
 }
