--- a/package.json
+++ b/package.json
@@ -4,21 +4,24 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
-    "start:api-doc": "API_SPEC=http://localhost:4200/open-api.json docusaurus start",
-    "build": "docusaurus build",
+    "start": "yarn run compile-plugins && docusaurus start",
+    "start:api-doc": "API_SPEC=http://localhost:4200/open-api.json yarn run start",
+    "build": "yarn run compile-plugins && docusaurus build",
     "swizzle": "docusaurus swizzle ",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "compile-plugins": "yarn tsc --p plugins/github-downloader",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@bobaboard/boba-editor": "^0.2.1",
     "@docusaurus/core": "^2.0.0-beta.15",
     "@docusaurus/preset-classic": "^2.0.0-beta.15",
     "@mdx-js/react": "^1.6.21",
+    "@octokit/plugin-paginate-rest": "^2.17.0",
     "clsx": "^1.1.1",
     "culori": "^2.0.3",
     "custom-webpack-plugin": "file:plugins/custom-webpack-plugin",
@@ -41,6 +44,7 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.0.0-beta.15",
+    "@octokit/core": "^3.5.1",
     "@octokit/plugin-rest-endpoint-methods": "^5.13.0",
     "@tsconfig/docusaurus": "^1.0.4",
     "docusaurus-plugin-remote-content": "^2.1.0",
