--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mdx-js/react": "^1.6.21",
     "@octokit/plugin-paginate-rest": "^2.17.0",
     "clsx": "^1.1.1",
+    "container-query-polyfill": "^0.1.2",
     "culori": "^2.0.3",
     "custom-webpack-plugin": "file:plugins/custom-webpack-plugin",
     "react": "^17.0.2",
