--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "redocusaurus": "^0.6.0",
+    "tsc": "^2.0.4",
     "twemoji": "^13.1.0"
   },
   "browserslist": {
