--- a/plugins/custom-webpack-plugin/package.json
+++ b/plugins/custom-webpack-plugin/package.json
@@ -1,5 +1,8 @@
 {
   "name": "custom-webpack-plugin",
   "version": "0.0.0",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "raw-loader": "^4.0.2"
+  }
 }
