--- a/package.json
+++ b/package.json
@@ -4,34 +4,31 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
+    "start": "yarn run compile-plugins && docusaurus start",
     "start:api-doc": "API_SPEC=http://localhost:4200/open-api.json yarn run start",
-    "build": "docusaurus build",
+    "build": "yarn run compile-plugins && docusaurus build",
     "swizzle": "docusaurus swizzle ",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "compile-plugins": "yarn tsc --p plugins/github-downloader",
+    "compile-plugins": "yarn tsc --p plugins/github-downloader && yarn --cwd plugins/excalidraw-mdx-plugin run build",
     "postinstall": "patch-package"
   },
   "dependencies": {
     "@bobaboard/boba-editor": "^0.2.1",
     "@docusaurus/core": "^2.0.0-beta.15",
     "@docusaurus/preset-classic": "^2.0.0-beta.15",
-    "@excalidraw/excalidraw": "^0.12.0",
     "@mdx-js/react": "^1.6.21",
     "@octokit/plugin-paginate-rest": "^2.17.0",
     "clsx": "^1.1.1",
     "container-query-polyfill": "^0.1.2",
     "culori": "^2.0.3",
-    "custom-webpack-plugin": "file:plugins/custom-webpack-plugin",
     "excalidraw-mdx-plugin": "file:plugins/excalidraw-mdx-plugin",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "redocusaurus": "^0.6.0",
-    "tsc": "^2.0.4",
     "twemoji": "^13.1.0"
   },
   "browserslist": {
@@ -55,8 +52,7 @@
     "expose-loader": "^3.0.0",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
-    "raw-loader": "^4.0.2",
-    "typescript": "^4.5.5"
+    "typescript": "^4.8.3"
   },
   "resolutions": {
     "prism-react-renderer": "1.2.0"
