--- a/plugins/excalidraw-mdx-plugin/package.json
+++ b/plugins/excalidraw-mdx-plugin/package.json
@@ -10,21 +10,18 @@
   },
   "dependencies": {
     "@excalidraw/excalidraw": "^0.12.0",
-    "canvas": "^2.10.1",
-    "puppeteer": "^17.1.3",
-    "unist-util-visit": "^4.1.1",
     "unist-util-visit-parents": "^5.1.1",
-    "vite-plugin-dts": "^1.5.0"
+    "raw-loader": "^4.0.2"
   },
   "devDependencies": {
     "@docusaurus/types": "^2.1.0",
-    "raw-loader": "^4.0.2",
     "remark": "^14.0.2",
     "to-vfile": "^7.2.3",
     "typescript": "^4.8.3",
     "vfile": "^5.3.5",
     "vite": "^3.1.0",
-    "vitest": "^0.23.2"
+    "vitest": "^0.23.2",
+    "vite-plugin-dts": "^1.5.0"
   },
   "exports": {
     ".": {
