--- a/plugins/github-downloader/package.json
+++ b/plugins/github-downloader/package.json
@@ -8,7 +8,9 @@
   "main": "dist/index.js",
   "dependencies": {
     "@octokit/core": "^4.0.5",
+    "@octokit/graphql": "^5.0.1",
     "@octokit/plugin-paginate-rest": "^4.3.0",
+    "dotenv": "^16.0.3",
     "typescript": "^4.8.3"
   }
 }
