--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -43,14 +43,15 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.0.0-beta.15",
+    "@octokit/plugin-rest-endpoint-methods": "^6.7.0",
     "@tsconfig/docusaurus": "^1.0.4",
     "docusaurus-plugin-remote-content": "^2.1.0",
+    "excalidraw-mdx-plugin": "*",
     "expose-loader": "^3.0.0",
     "github-downloader": "*",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
-    "typescript": "^4.8.3",
-    "excalidraw-mdx-plugin": "*"
+    "typescript": "^4.8.3"
   },
   "resolutions": {
     "prism-react-renderer": "1.2.0"
