--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -20,10 +20,12 @@
     "@docusaurus/core": "^2.0.0-beta.15",
     "@docusaurus/preset-classic": "^2.0.0-beta.15",
     "@mdx-js/react": "^1.6.21",
+    "classnames": "^2.3.2",
     "clsx": "^1.1.1",
     "container-query-polyfill": "^0.1.2",
     "culori": "^2.0.3",
     "excalidraw-mdx-plugin": "*",
+    "js-yaml": "^4.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "redocusaurus": "^0.6.0",
