--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -20,10 +20,12 @@
     "@docusaurus/core": "^2.0.0-beta.15",
     "@docusaurus/preset-classic": "^2.0.0-beta.15",
     "@mdx-js/react": "^1.6.21",
+    "classnames": "^2.3.2",
     "clsx": "^1.1.1",
     "container-query-polyfill": "^0.1.2",
     "culori": "^2.0.3",
     "excalidraw-mdx-plugin": "*",
+    "js-yaml": "^4.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "redocusaurus": "^0.6.0",
@@ -43,14 +45,15 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.0.0-beta.15",
+    "@octokit/plugin-rest-endpoint-methods": "^6.7.0",
     "@tsconfig/docusaurus": "^1.0.4",
     "docusaurus-plugin-remote-content": "^2.1.0",
+    "excalidraw-mdx-plugin": "*",
     "expose-loader": "^3.0.0",
     "github-downloader": "*",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
-    "typescript": "^4.8.3",
-    "excalidraw-mdx-plugin": "*"
+    "typescript": "^4.8.3"
   },
   "resolutions": {
     "prism-react-renderer": "1.2.0"
