polish up github plugin and don't throw on invalid token

--- a/docusaurus/src/_generated_data/projects.json
+++ b/docusaurus/src/_generated_data/projects.json
@@ -1,5 +1,27 @@
 [
   {
+    "id": "PVT_kwDOBKDHhM4AK4p8",
+    "title": "The \"almost there\" Realms Sprint (🛫 February 1st 2023, 🛬 March 15th 2023)",
+    "shortDescription": "Realms might be ready, but our community management strategy is not! Let's add some polish, pizzazz and code stability as we prepare to welcome our future neighbors.",
+    "readme": "What it says on the tin.\n\n---MACHINE DATA---\n```\nstatus: future\ntype: sprint\n```",
+    "url": "https://github.com/orgs/BobaBoard/projects/7",
+    "items": {
+      "nodes": []
+    },
+    "repositories": {
+      "nodes": []
+    },
+    "views": {
+      "nodes": [
+        {
+          "id": "PVTV_lADOBKDHhM4AK4p8zgBGU88",
+          "name": "View 1",
+          "layout": "TABLE_LAYOUT"
+        }
+      ]
+    }
+  },
+  {
     "id": "PVT_kwDOBKDHhM4AHLRP",
     "title": "Realms beta(ish) sprint (🛬June 9th)",
     "shortDescription": "Let's sprint to a new 6/9 by launching our first (second) Realm!",
@@ -117,7 +139,7 @@
     "id": "PVT_kwDOBKDHhM4AGIzL",
     "title": "The annoyances-be-gone sprint (🛫October 1st 🛬November 14th)",
     "shortDescription": "To get back into the swing of things after our forced break, we're fixing the small (and big) annoyances of BobaBoard's users and developers!",
-    "readme": "What it says on the tin.\n\n---MACHINE DATA---\n```\nstatus: active\ntype: sprint\n```",
+    "readme": "What it says on the tin.\n\n---MACHINE DATA---\n```\nstatus: closed\ntype: sprint\n```",
     "url": "https://github.com/orgs/BobaBoard/projects/5",
     "items": {
       "nodes": [
@@ -154,7 +176,7 @@
           "content": {
             "id": "I_kwDOE8ugM85SFnEt",
             "title": "Add thread status indicators within threads",
-            "body": "This is a combination of 2 requests:\r\n\r\n- [ ] Display whether a thread is muted or hidden from within the thread\r\n- [ ] Display whether a thread has been updated while the user is within the thread\r\n\r\nThese should likely be designed together. ",
+            "body": "This is a combination of 2 requests:\r\n\r\n- [x] Display whether a thread is muted or hidden from within the thread\r\n- [ ] Display whether a thread has been updated while the user is within the thread\r\n\r\nThese should likely be designed together. ",
             "url": "https://github.com/BobaBoard/issues/issues/96",
             "createdAt": "2022-09-18T22:50:01Z",
             "bodyUrl": "https://github.com/BobaBoard/issues/issues/96#issue-1377202477"
@@ -191,12 +213,12 @@
             "url": "https://github.com/riazaia"
           },
           "content": {
-            "id": "I_kwDOD9V3Vc5SFp_m",
+            "id": "I_kwDOD4rRLs5V4kLC",
             "title": "Primary action buttons should use the corresponding color",
-            "body": "Buttons that represent an action should be colored.\r\n\r\nFor example, the `Exterminate!` button in the post deletion confirmation dialogue should be white.\r\n![image](https://user-images.githubusercontent.com/42520601/190932489-3c8a6f0b-cb0a-48ed-8747-b1f9811607cf.png)\r\n\r\nButtons that need to be updated include:\r\n- [ ] Login dialogue > Cancel/Login\r\n- [ ] Logout dialogue > Cancel/Logout\r\n- [ ] Edit board sidebar > Back/Save\r\n- [ ] User Settings > Edit Information > Cancel/Save\r\n- [ ] Delete post confirmation dialogue > Nervermind/Exterminate!\r\n- [ ] New post dialogue > Cancel/Post\r\n\r\n(though there might be others I'm missing)",
-            "url": "https://github.com/BobaBoard/boba-frontend/issues/78",
+            "body": "Buttons that represent an action should be colored.\r\n\r\nFor example, the `Exterminate!` button in the post deletion confirmation dialogue should be white.\r\n![image](https://user-images.githubusercontent.com/42520601/190932489-3c8a6f0b-cb0a-48ed-8747-b1f9811607cf.png)\r\n\r\nButtons that need to be updated include:\r\n- [x] Login dialogue > Cancel/Login\r\n- [x] Logout dialogue > Cancel/Logout\r\n- [x] Edit board sidebar > Back/Save\r\n- [x] User Settings > Edit Information > Cancel/Save\r\n- [x] Delete post confirmation dialogue > Nervermind/Exterminate!\r\n- [x] New post dialogue > Cancel/Post\r\n- [x] New comment dialogue > Cancel/Submit \r\n\r\n(though there might be others I'm missing)",
+            "url": "https://github.com/BobaBoard/boba-components/issues/103",
             "createdAt": "2022-09-18T23:34:21Z",
-            "bodyUrl": "https://github.com/BobaBoard/boba-frontend/issues/78#issue-1377214438"
+            "bodyUrl": "https://github.com/BobaBoard/boba-components/issues/103#issue-1440891586"
           }
         },
         {
