--- a/plugins/github-downloader/tsconfig.json
+++ b/plugins/github-downloader/tsconfig.json
@@ -4,7 +4,8 @@
     "esModuleInterop": true,
     "jsx": "react-jsx",
     "resolveJsonModule": true,
-    "baseUrl": ".",
-    "outDir": "./dist"
+    "baseUrl": "./",
+    "outDir": "./dist",
+    "strict": true
   }
 }
