--- a/plugins/github-downloader/package.json
+++ b/plugins/github-downloader/package.json
@@ -11,6 +11,7 @@
     "@octokit/graphql": "^5.0.1",
     "@octokit/plugin-paginate-rest": "^4.3.0",
     "dotenv": "^16.0.3",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "zod": "^3.20.2"
   }
 }
