--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -19,6 +19,11 @@
     "@bobaboard/boba-editor": "^0.2.1",
     "@docusaurus/core": "^2.0.0-beta.15",
     "@docusaurus/preset-classic": "^2.0.0-beta.15",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mdx-js/react": "^1.6.21",
     "classnames": "^2.3.2",
     "clsx": "^1.1.1",
