turn github plugin into a script to update data

--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -11,6 +11,7 @@
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
+    "update-data": "node ../plugins/github-downloader/dist/index.js",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "postinstall": "patch-package"
