--- a/.github/workflows/update-git-data.yaml
+++ b/.github/workflows/update-git-data.yaml
@@ -1,6 +1,7 @@
 name: learn-github-actions
 run-name: ${{ github.actor }} is learning GitHub Actions
 on:
+  workflow_dispatch:
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron: "* 5 * * *"
