--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -18,8 +18,8 @@
   },
   "dependencies": {
     "@bobaboard/boba-editor": "^0.2.1",
-    "@docusaurus/core": "^2.0.0-beta.15",
-    "@docusaurus/preset-classic": "^2.0.0-beta.15",
+    "@docusaurus/core": "^2.4.1",
+    "@docusaurus/preset-classic": "^2.4.1",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
@@ -35,6 +35,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "redocusaurus": "^0.6.0",
+    "turbo": "^1.4.6",
     "twemoji": "^13.1.0"
   },
   "browserslist": {
