--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ build
 .env.development.local
 .env.test.local
 .env.production.local
-
+.vscode/settings.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
