--- a/plugins/excalidraw-mdx-plugin/tsconfig.json
+++ b/plugins/excalidraw-mdx-plugin/tsconfig.json
@@ -8,5 +8,6 @@
     "outDir": "./dist",
     "forceConsistentCasingInFileNames": true,
     "strict": true
-  }
+  },
+  "include": ["./src/**/*"]
 }
