--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -30,6 +30,7 @@
     "clsx": "^1.1.1",
     "container-query-polyfill": "^0.1.2",
     "culori": "^2.0.3",
+    "eslint": "^8.48.0",
     "excalidraw-mdx-plugin": "*",
     "js-yaml": "^4.1.0",
     "react": "^17.0.2",
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@docusaurus/eslint-plugin": "^2.4.1",
     "@docusaurus/module-type-aliases": "^2.0.0-beta.15",
     "@octokit/plugin-rest-endpoint-methods": "^6.7.0",
     "@tsconfig/docusaurus": "^1.0.4",
@@ -60,6 +62,7 @@
     "github-downloader": "*",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
+    "prettier": "3.0.3",
     "typescript": "^4.8.3"
   },
   "resolutions": {
