--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
+    "dev": "turbo run start",
     "start": "turbo run start",
     "serve": "turbo run serve"
   },
