--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.2.2",
     "@astrojs/starlight": "^0.32.5",
     "@astrojs/starlight-tailwind": "^3.0.1",
     "@astrojs/tailwind": "^5.1.4",
     "@iconify-json/lucide": "^1.2.33",
     "@iconify-json/simple-icons": "^1.2.29",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
     "astro": "^5.5.3",
     "astro-favicons": "^3.1.5",
     "astro-icon": "^1.1.5",
     "astro-meta-tags": "^0.3.1",
     "astro-robots-txt": "^1.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "sharp": "^0.33.5",
     "starlight-image-zoom": "^0.11.1",
     "starlight-sidebar-topics": "^0.6.0",
