--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/starlight": "^0.32.5",
     "@astrojs/starlight-tailwind": "^3.0.1",
     "@astrojs/tailwind": "^5.1.4",
+    "@bobaboard/boba-editor": "^0.2.0",
     "@iconify-json/lucide": "^1.2.33",
     "@iconify-json/simple-icons": "^1.2.29",
     "@types/react": "^19.0.12",
@@ -23,6 +24,7 @@
     "astro-icon": "^1.1.5",
     "astro-meta-tags": "^0.3.1",
     "astro-robots-txt": "^1.0.0",
+    "prism-react-renderer": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sharp": "^0.33.5",
