--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^4.2.2",
-    "@astrojs/starlight": "^0.32.5",
-    "@astrojs/starlight-tailwind": "^3.0.1",
-    "@astrojs/tailwind": "^5.1.4",
+    "@astrojs/react": "^4.3.0",
+    "@astrojs/starlight": "^0.34.3",
+    "@astrojs/starlight-tailwind": "^4.0.1",
     "@bobaboard/boba-editor": "^0.2.0",
-    "@iconify-json/lucide": "^1.2.33",
-    "@iconify-json/simple-icons": "^1.2.29",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
-    "astro": "^5.5.3",
+    "@iconify-json/lucide": "^1.2.47",
+    "@iconify-json/simple-icons": "^1.2.38",
+    "@tailwindcss/vite": "^4.1.8",
+    "@types/react": "^19.1.7",
+    "@types/react-dom": "^19.1.6",
+    "astro": "^5.9.2",
     "astro-favicons": "^3.1.5",
     "astro-icon": "^1.1.5",
-    "astro-meta-tags": "^0.3.1",
+    "astro-meta-tags": "^0.3.2",
     "astro-robots-txt": "^1.0.0",
     "prism-react-renderer": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "sharp": "^0.33.5",
-    "starlight-image-zoom": "^0.11.1",
+    "sharp": "^0.34.2",
+    "starlight-image-zoom": "^0.12.0",
     "starlight-sidebar-topics": "^0.6.0",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^4.1.8"
   }
 }
