--- a/package.json
+++ b/package.json
@@ -32,5 +32,10 @@
     "starlight-openapi": "^0.18.0",
     "starlight-sidebar-topics": "^0.6.0",
     "tailwindcss": "^4.1.8"
+  },
+  "devDependencies": {
+    "prettier": "^3.5.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.12"
   }
 }
