--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^19.1.0",
     "sharp": "^0.34.2",
     "starlight-image-zoom": "^0.12.0",
+    "starlight-links-validator": "^0.17.0",
     "starlight-openapi": "^0.18.0",
     "starlight-sidebar-topics": "^0.6.0",
     "tailwindcss": "^4.1.8"
